welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var nv=0
  for (i <- 0 to num.length -1){
    if (num(i)>0){
      nv=nv+1
      while (num(i+1)==num(i)){
        i=i+1
      }
      if (num(i+1)>num(i)){
        nv=nv+1
        i=i+1
      }
    }
  }
    return nv
}
 
    
    